# work

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  file.c  file.h
cmake/gtest/: gtest.cmake
test/: CMakeLists.txt  file.cpp
